		thowIndexOutOfBoundsException() (see immediately above).
	Bug fix to MovablePortrayal2D, which might throw a NullPointerException if
		the underlying object disappeared prior to handleMouseEvent being called.
		Thanks to Chris Wray <chris.x.898@gmail.com>
	ObjectGrid2D's getNeighbors...() functions no longer add 'null' into the result
		Bag as if it were an object.  'null' values are simply ignored.  This
		makes the methods consistent with DenseGrid2D and SparseGrid2D but a bit
		different from DoubleGrid2D and IntGrid2D.
	Added "name" property option to properties.
	Fixed bug in SimpleProperties where property indexes were allowed to
		equal numProperties (rather than numProperties -1).  
	Fixed documentation errors in the Manual describing the WCSS Tutorial.  Thanks to
		Stephen Davies <stephen@umw.edu>
	Updated JFreeChart to refer to http://jfree.org/jfreechart/.  Thanks to Stephen
		Davies <stephen@umw.edu>
	Display2D.setScale() now resets the viewport so the scroll bars are properly 
		updated.
	Added Display2D.getScrollPosition() and Display2D.setScrollPosition()
	Renamed SeriesAttributes.getName() and SeriesAttributes.setName() to getSeriesName()
		and getSeriesName() and made the original method names deprecated.  These
		methods had overridden an obscure method in Component which is used for
		obscure other reasons and we wanted to make sure we stayed clear of that.
	Deleted SimpleInspector.getName().
	Inspector now has getTitle() and setTitle() methods.
	Added ContinuousPortrayal2D.getAxes(), ContinuousPortrayal2D.setAxes(), and
		getDrawsFrameAndAxesInFront() and setDrawsFrameAndAxesInFront(...)
	Added NumberTextField.getText(...) and setText(...)
	SimpleInspector now has a smarter approach to its getTitle() method.
	Bug fix to TabbedInspector.  Thanks to Joey Harrison <jharri1@gmu.edu>
	Added Display2D.setSelectionMode(...) and Display2D.getSelectionMode()
	Added Display2D.performSelection(Point2D)